# Automated-News-Livestream-Intelligence-System

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  test_moondream.py  test_moondream_gguf.py  visualize_roi.py
config/: models.yaml  settings.yaml
models/: README.md
scripts/: download_models.sh  setup.sh
src/: __init__.py  utils.py
src/audio/: __init__.py
src/browser/: __init__.py
src/llm/: __init__.py
src/pipeline/: __init__.py  debug_mode.py
src/segment/: __init__.py
src/video/: __init__.py
src/vision/: __init__.py  moondream.py  moondream_gguf.py  tesseract_ocr.py  yolo_ribbon.py
